# FreakQuery

./: .gitignore  MANIFEST.in  README.md  config.toml  pyproject.toml
docs/: TAGS.md  USEFUL_TAG_COMBINATIONS.md
freakquery/: __init__.py  cache.py  cli.py  config.py  constants.py  dispatcher.py  engine.py  fq_types.py  loader.py  query_plan.py  rows.py  shell.py  tag_registry.py  units.py
freakquery/ops/: filters.py  grouping.py  metrics.py  selectors.py  transforms.py
freakquery/outputs/: json.py  text.py
freakquery/query/: context.py  contracts.py  executor.py  parser.py  planner.py  precedence.py  validator.py
freakquery/registry/: aliases.py
tests/: test_documented_combinations.py  test_queries.py
